docs: dựng base reset.css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoppe</title>
+    <!-- link css -->
+     <link rel="stylesheet" href="./assets/css/base.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
-    <h1>Welcome to Shoppe</h1>
+  
+
+
+    <!-- link js -->
+    <script src="./assets/js/myJs.js"></script>
 </body>
 </html>
